@@ -105,9 +105,10 @@
       L963, 44:R#.34   @腿长和车架上管计算公式 腿长*0.65=上管cm，例子 75*0.65=48.75cm
       L972, 45:R#.35   @svn E155037 以前的操作没有完成
       L980, 46:R#.36   @matrix 操作
-     Zndex_E : //z 2015-11-23 11:32:46 L.38 '44834 T2442876494.K ~973 +----+----+----+----+----+
-     TimeCnt : //z 2015-11-19 16:42:09 L.42 '26271 T2775797656.K ~56  +----+----+----+----+----+
-     Reg.Cnt : //z 2015-10-19 15:53:24 L.73 '29196 T153923189 .K ~37  +----+----+----+----+----+
+     Zndex_E : //z 2015-11-23 13:10:56 L.38 '38944 T728401453 .K ~979 +----+----+----+----+----+
+     TimeCnt : //z 2015-11-23 13:10:42 L.38 '38958 T728401416 .K ~57  +----+----+----+----+----+
+     Reg.Cnt : //z 2015-11-23 13:10:33 L.38 '38967 T728401384 .K ~38  +----+----+----+----+----+
+     #38  R+ : //z 2015-11-23 13:10:33 L.38 '38967 T728401384 .K ~38    V+.1014 L+.1072 
      #37  R+ : //z 2015-10-19 15:53:24 L.73 '29196 T153923189 .K ~37    V+.961  L+.1021 
      #36  R+ : //z 2015-10-08 17:41:19 L.84 '22721 T430354486 .K ~36    V+.920  L+.972  
      #35  R+ : //z 2015-10-08 11:36:09 L.84 '44631 T1270474995.K ~35    V+.905  L+.961  
@@ -149,7 +150,8 @@
      #3   O+ : //z 2015-09-04 21:24:47 L.118'9313  T3067438199.K ~3     V+.731  L+.1    
      #2   O+ : //z 2015-08-06 08:25:11 L.147'56089 T2984249525.K ~2     V+.572  L+.1    
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-11-23 11:32:46 L.38 '44834 T2442876494.K ~1010  R+.37   L+.1065 --+----+
+     Version : //z 2015-11-23 13:10:56 L.38 '38944 T728401453 .K ~1017  R+.38   L+.1073 --+----+
+     #53  R+ : //z 2015-11-23 13:10:33 L.38 '38967 T728401384 .K ~1014  R+.38   L+.1073 V+.1014 
      #53  V+ : //z 2015-11-19 16:42:32 L.42 '26248 T2775797748.K ~1007  R+.37   L+.1062 
      #52  V+ : //z 2015-10-30 17:54:18 L.62 '21942 T2306606228.K ~988   R+.37   L+.1046 
      #51  V+ : //z 2015-10-19 15:59:14 L.73 '28846 T154138778 .K ~969   R+.37   L+.1027 
@@ -1065,3 +1067,9 @@ svn checkout http://dx11-engine.googlecode.com/svn/trunk/ dx11-engine
 一个 fbx viewer
 https://code.google.com/archive/p/fbxviewer/
 #endregion //z 2015-10-19 15:53:24 L.73 '29196 BG57IV3@XCL T153923189 .K.F4146951713-+----+----+
+
+#region 11-23 13:10 R#.38   @cpp11
+//z 2015-11-23 13:10:42 L.38 '38958 T728401416 .K[T57,L1072,R38,V1016]
+01. 使用 cpp 11 改进程序
+http://www.cnblogs.com/qicosmos/category/490693.html
+#endregion //z 2015-11-23 13:10:33 L.38 '38967 BG57IV3@XCL T728401384 .K.F4146951713-+----+----+
