@@ -42,9 +42,10 @@
        Zcl_S : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
        Zcl_E : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
      Zndex_S : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
-     Zndex_E : //z 2015-11-17 10:00:13 L.44 '50387 T3476506149.K ~34  +----+----+----+----+----+
+     Zndex_E : //z 2015-11-23 14:59:56 L.38 '32404 T2024936539.K ~35  +----+----+----+----+----+
      TimeCnt : //z 2015-10-08 11:20:22 L.84 '45578 T1269073511.K ~2   +----+----+----+----+----+
-     Reg.Cnt : //z 2015-11-17 10:00:13 L.44 '50387 T3476506149.K ~9   +----+----+----+----+----+
+     Reg.Cnt : //z 2015-11-23 14:59:55 L.38 '32405 T2024936538.K ~10  +----+----+----+----+----+
+     #10  R+ : //z 2015-11-23 14:59:55 L.38 '32405 T2024936538.K ~10    V+.44   L+.270  
      #9   R+ : //z 2015-11-17 10:00:13 L.44 '50387 T3476506149.K ~9     V+.42   L+.251  
      #8   R+ : //z 2015-11-10 19:09:03 L.51 '17457 T1740529743.K ~8     V+.40   L+.232  
      #7   R+ : //z 2015-11-02 10:02:26 L.59 '50254 T900125733 .K ~7     V+.37   L+.212  
@@ -55,7 +56,8 @@
      #2   R+ : //z 2015-10-08 11:19:16 L.84 '45644 T1268210994.K ~2     V+.12   L+.114  
      #1   R+ : //z 2015-10-08 11:18:47 L.84 '45673 T1268175157.K ~1     V+.9    L+.94   
      File.Op : //z 2015-10-08 11:17:27 L.84 '45753 T1268139154.K ~0   +----+----+----+----+----+
-     Version : //z 2015-11-17 10:00:13 L.44 '50387 T3476506149.K ~43    R+.9    L+.253  --+----+
+     Version : //z 2015-11-23 14:59:56 L.38 '32404 T2024936539.K ~45    R+.10   L+.272  --+----+
+     #2   R+ : //z 2015-11-23 14:59:55 L.38 '32405 T2024936538.K ~44    R+.10   L+.271  V+.44   
      #2   R+ : //z 2015-11-17 10:00:13 L.44 '50387 T3476506149.K ~42    R+.9    L+.252  V+.42   
      #2   R+ : //z 2015-11-10 19:09:03 L.51 '17457 T1740529743.K ~40    R+.8    L+.233  V+.40   
      #2   V+ : //z 2015-11-02 10:02:26 L.59 '50254 T900125733 .K ~38    R+.7    L+.214  
@@ -250,3 +252,20 @@ Week.Kaizen
 五，W.2015-11-20 
 六，R.2015-11-21 
 #endregion //z 2015-11-17 10:00:13 L.44 '50387 BG57IV3@XCL T3476506149.K.F2564861307-+----+----+
+
+#region 11-23 14:59 R#.10   @第47周总结 2015-11-22 --> 2015-11-28
+Week.Plan
+	01. 
+Week.Done
+	01. 
+Week.Kaizen
+	01. 
+
+日，R.2015-11-22 
+一，W.2015-11-23 
+二，W.2015-11-24 
+三，W.2015-11-25 
+四，W.2015-11-26 
+五，W.2015-11-27 
+六，R.2015-11-28 
+#endregion //z 2015-11-23 14:59:55 L.38 '32405 BG57IV3@XCL T2024936538.K.F2564861307-+----+----+
